--- a/index.html
+++ b/index.html
@@ -1331,10 +1331,7 @@
         </div>
     </div>
     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" id="img-emoji-default"/>
-    <script src="./src/Utils/Format.js"></script>
-    <script src="./src/Controller/WhatsAppController.js"></script>
-    <script src="./src/Controller/CameraController.js"></script>
-    <script src="./src/app.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 
 </html>
